Add validation set logic to notebook and as separate train_val.py file
clear away output

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "modelfile": "wikiart.pth",
     "trainingdir": "../../wikiart/train",
+    "validationdir": "../../wikiart/valid",
     "testingdir": "../../wikiart/test",
     "device": "cuda:1",
     "epochs": 10,
