Part 1 with tons of related and unrelated revisions in other files

--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "modelfile": "wikiart.pth",
+    "modelfile": "wikiart-wrs.pth",
     "trainingdir": "../../wikiart/train",
-    "validationdir": "../../wikiart/valid",
     "testingdir": "../../wikiart/test",
-    "device": "cuda:1",
-    "epochs": 10,
+    "validationdir": "../../wikiart/valid",
+    "device": "cuda:0",
+    "epochs": 20,
     "batch_size": 32
 }
